<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="2dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <ListView
            android:id="@+id/leftPrefs"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:divider="@null"
            android:scrollbars="none"
            android:stackFromBottom="true"
            style="@android:style/DeviceDefault.ButtonBar"/>

        <ListView
            android:id="@+id/appListView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:divider="@null"
            android:focusable="true"
            android:scrollbars="none"
            android:stackFromBottom="true"
            style="@android:style/DeviceDefault.ButtonBar"/>

        <ListView
            android:id="@+id/rightPrefs"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:divider="@null"
            android:scrollbars="none"
            android:stackFromBottom="true"
            style="@android:style/DeviceDefault.ButtonBar"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/transparent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/leftBtn1"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/left1"
            style="@android:style/DeviceDefault.ButtonBar"/>

        <Button
            android:id="@+id/leftBtn2"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/left2"
            style="@android:style/DeviceDefault.ButtonBar"/>

        <View
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@android:color/transparent" />

        <EditText
            android:id="@+id/searchKeyEdit"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:autofillHints="name"
            android:cursorVisible="false"
            android:gravity="center"
            android:hint="@string/key"
            android:inputType="text"
            android:paddingStart="8sp"
            android:paddingEnd="8sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@android:color/transparent" />

        <Button
            android:id="@+id/rightBtn1"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/right1"
            style="@android:style/DeviceDefault.ButtonBar"/>

        <Button
            android:id="@+id/rightBtn2"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/right2"
            style="@android:style/DeviceDefault.ButtonBar"/>

    </LinearLayout>
</LinearLayout>